src/index.css
@import "tailwindcss";

@theme {
  --color-grey-900: #2a4144;
  --color-grey-500: #86a2a5;
  --color-green-600: #0c7d69;
  --color-green-200: #e0f1e8;
  --color-error: #d73c3c;
  --font-karla: "Karla", sans-serif;
}

body {
  @apply font-karla bg-green-200;
}

@layer base {
  h1 {
    @apply font-karla font-bold text-[32px] leading-[100%] tracking-[-1px] text-grey-900;
  }
}

@layer components {
  .input-wrapper {
    @apply flex flex-col space-y-1.5;
  }

  .input-label {
    @apply text-[16px] leading-[150%] tracking-[0px] text-grey-900;
  }

  .input {
    @apply border border-grey-500 w-full h-10 rounded-md p-2 transition-all cursor-pointer hover:border-green-600 focus:outline-0 focus:ring-green-600;
  }

  .input.error,
  .textarea.error {
    @apply border-error;
  }

  .input-error-message {
    @apply block text-[16px] leading-[150%] tracking-[0px] text-error;
  }

  .radio-input {
    @apply flex items-center space-x-2 border border-grey-500 rounded-md p-2 h-10 transition-all cursor-pointer hover:border-green-600 focus:outline-0 focus:ring-green-600;
  }

  .radio-input-label {
    @apply text-[18px] leading-[150%] tracking-[0px] text-grey-900;
  }

  .textarea {
    @apply border border-grey-500 w-full rounded-md p-2 transition-all cursor-pointer hover:border-green-600 focus:outline-0 focus:ring-green-600;
  }
}

